--- a/views/interview.ejs
+++ b/views/interview.ejs
@@ -149,7 +149,7 @@
 <script src="js/camera.js"></script>
 
 <script>
-    var websiteUrl = "https://localhost:3000";
+    var websiteUrl = "https://10.105.184.45:3000";
     var audioFolder = websiteUrl + "/assets/Audio/items/"
     var videoFolder = websiteUrl + "/assets/Video/"
     var imageFolder = "assets/Images/"
